--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  intl: ^0.17.0
+  http: ^0.12.2
+  path_provider: ^2.0.2
+
+  window_location_href: ^1.0.0
+  like_button: ^2.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
