--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
   like_button: ^2.0.2
   flutter_svg: ^0.22.0
   url_launcher: ^6.0.9
+  universal_platform: ^1.0.0+1
+
+#  flutter_web_plugins:
+#    sdk: flutter
 
 dev_dependencies:
   flutter_test:
